--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "php": ">=5.4"
     },
     "autoload": {
-        "psr-4": { "saab\\": "src/" }
+        "psr-4": { "CFlashMessage\\": "src/" }
     }
 
 }
