Added Flash Message

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,6 @@
         "php": ">=5.4"
     },
     "autoload": {
-        "psr-4": { "CFlashMessage\\": "src/" }
+        "psr-4": { "FlashMessage\\": "src/" }
     }
-
 }
